--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://fullmetal001.github.io/PruebaWeb/",
+  "homepage": "https://fullmetal001.github.io/PruebaWeb",
   "scripts": {
     "dev": "vite",
     "predeploy": "npm run build",
