--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "type": "module",
   "homepage": "https://fullmetal001.github.io/PruebaWeb",
   "scripts": {
-    "dev": "vite",    
+    "dev": "vite --host 0.0.0.0",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
